--- a/Peminjaman-sepeda-kampus/WebContent/resources/css/LoginPage/style2.css
+++ b/Peminjaman-sepeda-kampus/WebContent/resources/css/LoginPage/style2.css
@@ -1,8 +1,8 @@
 body{
-   margin: 0;
+    margin: 0;
     padding: 0;
     width: 100%;
-    background: url(../../img/sunset/image.jpg) no-repeat;
+    background: url(../../img/LoginPage/image.jpg) no-repeat;
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
@@ -11,10 +11,10 @@ body{
 
 .login-box{
     width: 320px;
-    height: 420px;
+    height: 800px;
     background: rgba(0, 0, 0, 0.7);
     color: #fff;
-    top: 50%;
+    top: 75%;
     left: 50%;
     position: absolute;
     transform: translate(-50%,-50%);
