--- a/Peminjaman-sepeda-kampus/WebContent/resources/css/Login/style.css
+++ b/Peminjaman-sepeda-kampus/WebContent/resources/css/Login/style.css
@@ -2,7 +2,7 @@ body{
     margin: 0;
     padding: 0;
     width: 100%;
-    background: url(../../img/LoginPage/image.jpg) no-repeat;
+    background: url(../../img/Login/image.jpg) no-repeat;
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
@@ -65,7 +65,7 @@ h1{
     outline: none;
     margin-top: 10px;
     height: 40px;
-    background: #7cc576;
+    background: #ff7200;
     color: #fff;
     font-size: 18px;
     font-weight: bold;
